Updated events and fixed a layout issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -312,6 +312,13 @@ li:hover .dropdown-content {
   line-height: 22px;
 }
 
+.values {
+  margin-left: 65px;
+  margin-right: 65px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
 .values,
 .mission-title {
   font-size: 24px;
@@ -327,6 +334,8 @@ li:hover .dropdown-content {
   color: #4a4a4a;
   line-height: 22px;
   margin-bottom: 88px;
+  margin-left: 65px;
+  margin-right: 65px;
   padding: 0 48px;
 }
 
